# Sable

./: CMakeLists.txt  LICENSE.txt  README.md
engine/: CMakeLists.txt
engine/include/sableEng/: engine.h
engine/include/sableEng/core/: assetshelper.h  deletor.h  keyboard.h  scene.h  windowmanager.h
engine/include/sableEng/gameobjects/: gameobjects.h
engine/include/sableEng/gameobjects/objects/: camera.h  sprite.h
engine/include/sableEng/gfx/: renderhelpers.h  renderstages.h  vkbase.h  vkbuffer.h  vkcmdhelper.h  vkdebug.h  vkdefines.h  vkdescriptors.h  vkdevice.h  vkmesh.h  vkpipeline.h  vkrenderer.h  vkswapchain.h
engine/include/sableEng/scripting/: scripting.h
engine/include/sableEng/utils/: defines.h  singleton.h
engine/src/: engine.cpp
engine/src/core/: assetshelper.cpp  keyboard.cpp  scene.cpp  windowmanager.cpp
engine/src/gameobjects/: gameobjects.cpp
engine/src/gameobjects/objects/: sprite.cpp
engine/src/gfx/: renderstages.cpp  vkbase.cpp  vkbuffer.cpp  vkcmdhelper.cpp  vkdebug.cpp  vkdescriptors.cpp  vkdevice.cpp  vkmesh.cpp  vkpipeline.cpp  vkrenderer.cpp  vkswapchain.cpp
engine/src/scripting/: scripting.cpp
src/: main.cpp  main.old.cpp
